# Velox

./: .gitignore  LICENSE  VeloxAdvanced.h  VeloxArch.h  VeloxBitStream.h  VeloxCore.h  VeloxEntropy.h  VeloxFormat.h  VeloxIO.h  VeloxMetadata.h  VeloxNeural.h  VeloxPlayerGUI.cpp  VeloxQtPlayerEngine.cpp  VeloxQtPlayerEngine.h  VeloxQtPlayerWindow.cpp  VeloxQtPlayerWindow.h  VeloxServer.cpp  VeloxStreamClient.cpp  VeloxTagBridge.h  VeloxThreads.h  main.cpp  meson.build  meson_options.txt  player_ui.cpp  readme.MD  tutorial.MD  velox_encoder.cpp  velox_player_main.cpp
scripts/: copy_deps.py  dlls_list.txt
